components/HeaderTop/HeaderTop.scss
.headerSec {
  background-color: #E66926;
  color: white;
  padding-top: 3px;
}

.headerInfo {
  font-size: 13px;
  text-align: center;
  margin-top: 10px;
  display: block;
}

.headerSec svg {
  color: white;
}

.headerSec .d-flex {
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.headerSec p {
  font-size: 13px;
  display: flex;
  align-items: center;
}

.headerSec p svg {
  color: white;
}

.headerSec a {
  color: white;
  text-decoration: none;
}

.headerSec small {
  display: block;
  font-size: 12px;
}

.callUs svg {
  color: #323232 !important;
}

.callUs {
  background-color: #FFCC00;
  color: #323232;
  padding: 0 6px;
}

.callUs a {
  font-weight: bold;
  color: #323232 !important;
}

@media (max-width: 767px) {
  .headerSec {
    padding: 10px 0;
  }

  .headerSec .d-flex {
    flex-direction: column;
    gap: 1rem; /* Reduced gap between items */
  }

  .headerSec p {
    font-size: 12px; /* Smaller font size for mobile */
  }

  .headerSec a {
    font-size: 12px; /* Smaller link font size for mobile */
  }

  .callUs a {
    font-size: 14px; /* Slightly larger font for mobile call-to-action */
  }

  .headerInfo {
    font-size: 11px; /* Reduce font size for info on small screens */
    margin-top: 15px;
  }
}

